--- a/src/app/front/components/subscribe/subscribe.component.css
+++ b/src/app/front/components/subscribe/subscribe.component.css
@@ -53,8 +53,17 @@
 .plans-cover-img{
   width: 100%;
   height: 300px;
-  object-fit: cover;
+  object-fit: contain;
+  background-color: #ffffff;
   object-position: top center;
+}
+.cover-img-text{
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate3d(-50%,-50%,0);
+  color: #f8c534;
+  font-size: 32px;
 }
 
 .page-heading{
@@ -81,5 +90,41 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 15px 10px 0px 10px;
+  margin: 15px 10px 20px 10px;
 }
+
+.plan-features-heading{
+  text-align: center;
+  color: #0f0f0f;
+  margin-top: 20px;
+}
+
+.feature-item-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: stretch;
+}
+
+.feature-item .item-text{
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.feature-item .item-img{
+  height:150px;
+  margin-bottom: 15px;
+  border:1px solid;
+}
+.feature-list{
+  padding: 0 0 0 20px;
+  margin-bottom: 30px;
+  list-style: disc;
+}
+.feature-list li {
+  margin-bottom: 10px;
+  font-weight: 600;
+  font-size: 18px;
+}
+
