--- a/src/app/front/components/subscribe/subscribe.component.html
+++ b/src/app/front/components/subscribe/subscribe.component.html
@@ -1,6 +1,7 @@
 <div style="background-color: #f8c534">
-  <div>
+  <div style="position: relative">
     <img class="img-responsive plans-cover-img" src="../../../../assets/images/TropheeMoney.jpg">
+    <div class="cover-img-text">Get The Access. Win Cash.</div>
   </div>
   <h1 class="page-heading">All Access Packages</h1>
   <div class="container-fluid">
@@ -24,7 +25,7 @@
             </div>
             <div class="plan-time">{{plan.interval_count+' '+plan.interval}}</div>
           </div>
-          <div class="plan-trial-period">{{'('+plan.trial_period_days+'-days free trial)'}}</div>
+          <!--<div class="plan-trial-period">{{'('+plan.trial_period_days+'-days free trial)'}}</div>-->
           <!-- <button class="btn-subscribe btn-lg btn-primary" (click)="onBtnSubscribeClick(plan)">Subscribe
           </button> -->
           <button class="btn-subscribe btn-lg btn-primary" (click)="couponClicked(plan)">Subscribe
@@ -32,6 +33,61 @@
           <!-- <button class="btn-subscribe btn-lg btn-primary" (click)="open(content, plan)">Subscribe
           </button> -->
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <h1 class="plan-features-heading">Why You Should Become A Member</h1>
+      </div>
+      <div class="col-sm-12">
+        <div class="feature-item-container">
+          <div class="feature-item">
+            <div class="item-img"></div>
+            <div class="item-text">
+              Daily Skeleton Lineups
+            </div>
+          </div>
+          <div class="feature-item">
+            <div class="item-img"></div>
+            <div class="item-text">
+              24/7 Members Only Stack Chat
+            </div>
+          </div>
+          <div class="feature-item">
+            <div class="item-img"></div>
+            <div class="item-text">
+              Premium Articles
+            </div>
+          </div>
+          <div class="feature-item">
+            <div class="item-img"></div>
+            <div class="item-text">
+              Coaching From Our Pros
+            </div>
+          </div>
+          <div class="feature-item">
+            <div class="item-img"></div>
+            <div class="item-text">
+              Pre and Post Lock Live Stream Analysis
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <h1 class="plan-features-heading">Premium Features</h1>
+      </div>
+      <div class="col-sm-12">
+        <ul class="feature-list">
+          <li>Daily Skeleton lineups(2 empty spots)</li>
+          <li>24/7 Slack chat room with around clock interaction with RotoPros coaches and community members</li>
+          <li>Unique DFS content for following sports: NFL, NBA, MLB, NHL, Soccer, MMA, PGA</li>
+          <li>Personalized coaching from top DraftKings and FanDule players</li>
+          <li>Podcasts and live shows that give insight to DFS success</li>
+          <li>Relevant news updates and Breaking news</li>
+          <li>MLB player projections</li>
+        </ul>
       </div>
     </div>
   </div>
