plans page remaining changes done.

--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -109,7 +109,7 @@
               <!--<a routerLink="/lineup-optimizer/nba" (click)="closeMobileMenu()">NBA Optimizer</a>-->
 
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
-                <a routerLink="/subscribe" (click)="closeMobileMenu()">Plans</a>
+                <a (click)="closeMobileMenu();onPlansClick()" style="cursor: pointer">Plans</a>
               </li>
 
               <li id="rss">
