--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -4,7 +4,7 @@
     <div class="row indexNPrt1Wrapper">
 
       <!-- this is better done as a directive -->
-      <div class="alert alert-success fade in" *ngIf="redirected">
+      <div class="alert alert-success fade in redirect-msg" *ngIf="redirected">
         {{ redirectMessage }}
       </div>
 
