--- a/src/app/front/components/news/news.component.html
+++ b/src/app/front/components/news/news.component.html
@@ -26,9 +26,10 @@
           <!-- Tab panes -->
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="NFL">
+              <!--
 
               <div class="dTabs dTabsInner">
-                <!-- Nav tabs -->
+                <!-- Nav tabs
                 <ul class="nav nav-tabs" role="tablist">
                   <li role="presentation" class="active">
                     <a (click)="onNewsPriorityChanged(PRIORITY_ALL)"
@@ -37,6 +38,7 @@
                        aria-controls="All">All
                     </a>
                   </li>
+
                   <li role="presentation">
                     <a href="#Urgent"
                        (click)="onNewsPriorityChanged(PRIORITY_URGENT)"
@@ -60,11 +62,12 @@
                        data-toggle="tab">Noteworthy</a>
                   </li>
                 </ul>
+              -->
                 <!-- Tab panes -->
                 <div class="tab-content">
                   <div class="tab-pane active">
-                    <div class="no-news-msg" *ngIf="!newsRecords || !newsRecords.length">No news available !!</div>
-                    <div class="newsItmWrap">
+                    <div class="no-news-msg" *ngIf="!newsRecords || !newsRecords.length">Currently no news available</div>
+                    <!-- <div class="newsItmWrap">
                       <div class="newsItm" *ngFor="let news of newsRecords | paginate: {
                                                       itemsPerPage: 10,
                                                       currentPage: currentPage}">
@@ -86,41 +89,22 @@
                             <p style="text-align: justify">{{news?.news_notes}}</p>
                             <h5 *ngIf="news.news_analysis">Analysis</h5>
                             <p *ngIf="news.news_analysis" style="text-align: justify">{{news?.news_analysis}}</p>
-                            <!--<i class="newsReprtr">As reported by RotoGrinders Player Projections</i>-->
                           </div>
                         </div>
-                        <!--<div class="newsItmBtm">
-                          <div class="newsItmBtmLft">
-                            <div class="newsItmBtmLft1">
-                              <span class="icnWrapperS"><img src="../../../../assets/images/news_icn1.png" alt=""
-                                                             class="img-responsive"/></span><span class="txtWrapper">86.14 Proj</span>
-                            </div>
-                            <div class="newsItmBtmLft2">
-                              <span class="txtWrapper">10.90 pt/$</span>
-                            </div>
-                            <div class="newsItmBtmLft3">
-                              <div class="">
-                                <span class="txtWrapper">$7,900</span>
-                              </div>
-                              <div class="">
-                                <span class="icnWrapperS"><img src="../../../../assets/images/contests_icn1.png" alt=""
-                                                               class="img-responsive"/></span><span class="txtWrapper">93.72 Proj</span>
-                              </div>
-                            </div>
-                            <div class="newsItmBtmLft4">
-                              <span class="txtWrapper">13.58 pt/$</span>
-                            </div>
-                            <div class="newsItmBtmLft5">
-                              <span class="txtWrapper">$6,900</span>
-                            </div>
-                          </div>
-                          <div class="newsItmBtmRght">
-                            <span class="icnWrapperS"><img src="../../../../assets/images/news_icn2.png" alt=""
-                                                           class="img-responsive"/></span><span class="txtWrapper">pga general-strategy</span>
-                          </div>
-                        </div>-->
                       </div>
-                    </div>
+                    </div> -->
+
+                    <div class="newsItmWrap">
+                        <div class="newsItm" *ngFor="let news of newsRecords | paginate: {
+                                                        itemsPerPage: 10,
+                                                        currentPage: currentPage}">
+                          <div class="newsItmTp">
+                            <div class="newsItmNameWrap">
+                             <div [innerHTML]="news.content.rendered"></div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
 
                     <div class="pagination">
                       <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
