Replace news.component.html

--- a/src/app/front/components/news/news.component.html
+++ b/src/app/front/components/news/news.component.html
@@ -26,10 +26,9 @@
           <!-- Tab panes -->
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="NFL">
-              <!--
 
               <div class="dTabs dTabsInner">
-                <!-- Nav tabs
+                <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
                   <li role="presentation" class="active">
                     <a (click)="onNewsPriorityChanged(PRIORITY_ALL)"
@@ -39,7 +38,7 @@
                     </a>
                   </li>
 
-                  <li role="presentation">
+                  s<li role="presentation">
                     <a href="#Urgent"
                        (click)="onNewsPriorityChanged(PRIORITY_URGENT)"
                        role="tab"
@@ -62,7 +61,6 @@
                        data-toggle="tab">Noteworthy</a>
                   </li>
                 </ul>
-              -->
                 <!-- Tab panes -->
                 <div class="tab-content">
                   <div class="tab-pane active">
