plans page remaining changes done.

--- a/src/app/front/components/plan/plan.component.html
+++ b/src/app/front/components/plan/plan.component.html
@@ -19,7 +19,7 @@
                 <span>{{(plan.amount / 100) | currency:'USD':true}}/</span>
               </span>
             </div>
-            <div class="plan-time">{{plan.interval_count+' '+plan.interval}}</div>
+            <div class="plan-time">{{plan.interval}}</div>
           </div>
           <!--<div class="plan-trial-period">{{'('+plan.trial_period_days+'-days free trial)'}}</div>-->
           <!-- <button class="btn-subscribe btn-lg btn-primary" (click)="onBtnSubscribeClick(plan)">Subscribe
@@ -82,11 +82,11 @@
     </div>
     <div class="row">
       <div class="col-sm-12">
-        <h1 class="plan-features-heading">Premium Features</h1>
+        <h1 class="plan-features-heading">Premium Features:</h1>
       </div>
       <div class="col-sm-12">
         <ul class="feature-list">
-          <li>Daily Skeleton lineups(2 empty spots)</li>
+          <li>Daily Skeleton lineups (2 empty spots)</li>
           <li>24/7 Slack chat room with around clock interaction with RotoPros coaches and community members</li>
           <li>Unique DFS content for following sports: NFL, NBA, MLB, NHL, Soccer, MMA, PGA</li>
           <li>Personalized coaching from top DraftKings and FanDule players</li>
