Typo correction and font color changes done.

--- a/src/app/front/components/plan/plan.component.css
+++ b/src/app/front/components/plan/plan.component.css
@@ -64,7 +64,7 @@
   top: 50%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
-  color: #f8c534;
+  color: #000000;
   font-size: 32px;
 }
 
