--- a/src/app/front/components/plan/plan.component.html
+++ b/src/app/front/components/plan/plan.component.html
@@ -86,12 +86,12 @@
       </div>
       <div class="col-sm-12">
         <ul class="feature-list">
-          <li>Daily Skeleton lineups (2 empty spots)</li>
+          <li>Daily skeleton lineups (2 empty spots)</li>
           <li>24/7 Slack chat room with around clock interaction with RotoPros coaches and community members</li>
-          <li>Unique DFS content for following sports: NFL, NBA, MLB, NHL, Soccer, MMA, PGA</li>
-          <li>Personalized coaching from top DraftKings and FanDule players</li>
+          <li>Unique DFS content for following sports: NFL, NBA, MLB, NHL, Soccer, MMA and PGA</li>
+          <li>Personalized coaching from top DraftKings and FanDuel players</li>
           <li>Podcasts and live shows that give insight to DFS success</li>
-          <li>Relevant news updates and Breaking news</li>
+          <li>Relevant news updates and breaking news</li>
           <li>MLB player projections</li>
         </ul>
       </div>
