--- a/src/app/user/components/settings/saved-cards/saved-cards.component.html
+++ b/src/app/user/components/settings/saved-cards/saved-cards.component.html
@@ -2,7 +2,76 @@
   <div class="common-loader" *ngIf="isLoading">
     <md-progress-spinner mode="indeterminate" color="accent" style="width: 50px;height: 50px"></md-progress-spinner>
   </div>
-  <div class="cards-container">
+
+  <div class="row">
+    <div class="col-sm-offset-11 col-sm-1">
+      <button type="button" class="btn btn-primary my-btn" (click)="onCardAddBtnClicked()">Add</button>
+    </div>
+    <div class="col-xs-12">
+      &nbsp;
+    </div>
+
+    <div class="col-xs-12" >
+      <div id="card-element">
+      <!-- A Stripe Element will be inserted here. -->
+      </div>
+    </div>
+    <!-- <button (click)="addCard()">Submit</button> -->
+    <div class="col-xs-12">
+      &nbsp;
+    </div>
+
+    <button type="button" *ngIf="card" class="btn btn-primary my-btn col-xs-2 col-xs-offset-5" (click)="addCard()">Add Card</button>
+
+    <div class="col-xs-12">
+      &nbsp;
+    </div>
+
+  </div>
+
+
+
+  <div class="cards-container row">
+
+    <div class="card payment-card col-xs-6" style="background:#d2270c85" *ngFor="let card of cards">
+      <!-- <div class="card-actions">
+        <button  (click)="onCardRemoveBtnClicked(card)" [class.active]="true"><md-icon>delete</md-icon></button>
+        <span (click)="onCardDefaultBtnClicked(card)" [md-tooltip]="card.card_id == defaultCard ? 'Default card' : 'Set as default card for future payments'" [class.active]="true"><md-icon>{{card.card_id == defaultCard ? 'star' : 'star_border'}}</md-icon></span>
+        <span (click)="onCardDefaultBtnClicked(card)"><md-icon>close</md-icon></span>
+      </div> -->
+      <div class="card-actions">
+        <span (click)="onCardDefaultBtnClicked(card)"
+              [md-tooltip]="card.card_id == defaultCard ? 'Default card' : 'Set as default card for future payments'"
+              [class.active]="card.card_id == defaultCard"><md-icon>{{card.card_id == defaultCard ? 'star' : 'star_border'}}</md-icon></span>
+        <span (click)="onCardRemoveBtnClicked(card)"
+              md-tooltip="Remove card"><md-icon>clear</md-icon></span>
+      </div>
+
+      <div class="bank-name" title="bank">{{card.brand}}</div>
+      <div class="chip">
+        <div class="side left"></div>
+        <div class="side right"></div>
+        <div class="vertical top"></div>
+        <div class="vertical bottom"></div>
+      </div>
+      <div class="data">
+        <div class="pan" title="XXXX XXXX XXXX XXXX">XXXX XXXX XXXX {{card.last4}}</div>
+        <div class="exp-date-wrapper">
+          <div class="left-label">EXPIRES END</div>
+          <div class="exp-date">
+            <div class="date">{{card.exp_month || 12}}/{{card.exp_year || 2030}}</div>
+            <div class="upper-labels">MONTH / YEAR</div>
+          </div>
+        </div>
+      </div>
+      <div class="lines-down"></div>
+      <div class="lines-up"></div>
+
+
+    </div>
+  </div>
+
+  <!-- <div class="cards-container">
     <div class="payment-card" *ngFor="let card of cards">
       <div class="card-actions">
         <span (click)="onCardDefaultBtnClicked(card)"
@@ -15,5 +84,5 @@
       <div class="number">XXXX XXXX XXXX {{card.last4}}</div>
       <div class="country">{{card.country}}</div>
     </div>
-  </div>
+  </div> -->
 </div>
