--- a/src/app/user/components/settings/saved-cards/saved-cards.component.css
+++ b/src/app/user/components/settings/saved-cards/saved-cards.component.css
@@ -83,7 +83,6 @@ body {
   left: 0;
   bottom: 0;
   right: 0;
-  margin: auto;
   width: 85.60mm;
   height: 53.98mm;
   color: #fff;
@@ -101,7 +100,7 @@ body {
 .bank-name {
   float: right;
   margin-top: 15px;
-  margin-right: 30px;
+  margin-right: 5px;
   font: 800 28px 'Open Sans', Arial, sans-serif;
 }
 .chip {
@@ -365,7 +364,7 @@ body {
 .lines-down:after {
   content: '';
   position: absolute;
-  top: 20px;
+  top: 35px;
   left: -100px;
   z-index: 10;
   width: 350px;
@@ -398,7 +397,8 @@ body {
 .lines-up:before {
   content: '';
   position: absolute;
-  top: -110px;
+  pointer-events: auto;
+  top: 210px;
   left: -70px;
   z-index: 2;
   width: 480px;
@@ -428,9 +428,10 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="rgba(64, 49, 178, 0)", endColorstr="#23189a", GradientType=1);
   /* IE6-9 fallback on horizontal gradient */
 }
-.lines-up:after {
+/* .lines-up:after {
   content: '';
   position: absolute;
+  pointer-events: auto;
   top: -180px;
   left: -200px;
   z-index: 1;
@@ -446,21 +447,21 @@ body {
   box-shadow: inset 1px 1px 44px #4035b2;
   background: #2d21a6;
   /* Old browsers */
-  background: -moz-radial-gradient(center, ellipse cover, rgba(45, 33, 166, 0) 100%, #2d21a6 100%);
+  /* background: -moz-radial-gradient(center, ellipse cover, rgba(45, 33, 166, 0) 100%, #2d21a6 100%); */
   /* FF3.6+ */
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(45, 33, 166, 0)), color-stop(100%, #2d21a6));
+  /* background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(45, 33, 166, 0)), color-stop(100%, #2d21a6)); */
   /* Chrome,Safari4+ */
-  background: -webkit-radial-gradient(center, ellipse cover, rgba(45, 33, 166, 0) 100%, #2d21a6 100%);
+  /* background: -webkit-radial-gradient(center, ellipse cover, rgba(45, 33, 166, 0) 100%, #2d21a6 100%); */
   /* Chrome10+,Safari5.1+ */
-  background: -o-radial-gradient(center, ellipse cover, rgba(45, 33, 166, 0) 44%, #2d21a6 100%);
+  /* background: -o-radial-gradient(center, ellipse cover, rgba(45, 33, 166, 0) 44%, #2d21a6 100%); */
   /* Opera 12+ */
-  background: -ms-radial-gradient(center, ellipse cover, rgba(45, 33, 166, 0) 44%, #2d21a6 100%);
+  /* background: -ms-radial-gradient(center, ellipse cover, rgba(45, 33, 166, 0) 44%, #2d21a6 100%); */
   /* IE10+ */
-  background: radial-gradient(ellipse at center, rgba(45, 33, 166, 0) 44%, #2d21a6 100%);
+  /* background: radial-gradient(ellipse at center, rgba(45, 33, 166, 0) 44%, #2d21a6 100%); */
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="rgba(45, 33, 166, 0)", endColorstr="#2d21a6", GradientType=1);
+  /* filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="rgba(45, 33, 166, 0)", endColorstr="#2d21a6", GradientType=1); */
   /* IE6-9 fallback on horizontal gradient */
-}
+/* } */
 
 
 
@@ -476,7 +477,7 @@ body {
  * how you can use CSS to style your Element's container.
  */
 .StripeElement {
-  background-color: white;
+  background-color: #fdd66d9c;
   height: 40px;
   padding: 10px 12px;
   border-radius: 4px;
