--- a/src/app/front/components/subscribe/subscribe.component.css
+++ b/src/app/front/components/subscribe/subscribe.component.css
@@ -44,3 +44,13 @@
 .discount-text {
   color: #36bc77;
 }
+
+.redirect-msg{
+  font-size: 20px;
+  padding: 18px 18px;
+  margin-bottom: 0;
+}
+
+.redirect-msg.alert-dismissible .close{
+  opacity: 0.8;
+}
