sign up page plans link changed.

--- a/src/app/front/components/sign-up/sign-up.component.html
+++ b/src/app/front/components/sign-up/sign-up.component.html
@@ -13,7 +13,7 @@
                   <h3><span class="licnWrapper"><img src="../../../../assets/images/login_title_icn.png" alt=""
                                                      class="img-responsive"/></span><span>Sign Up</span></h3>
                   <!-- <p>Signup for a free account today.</p> -->
-                  <p class="sub-title-txt"><a routerLink="/subscribe" style="color: #999">Explore our plans in detail</a> or sign up below. </p>
+                  <p class="sub-title-txt"><a routerLink="/plans" style="color: #999">Explore our plans in detail</a> or sign up below. </p>
                   <div #signUpError>
                     <div class="alert alert-danger fade " [class.in]="signUpErrors">
                       <span>{{signUpErrors}}</span>
