--- a/src/app/user/components/footer/user-footer.component.html
+++ b/src/app/user/components/footer/user-footer.component.html
@@ -32,11 +32,11 @@
         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
           <h1 class="footerHdin">Follow Us on :</h1>
           <ul class="footerSocialLinks">
-            <li><a href="https://twitter.com/RotoProsDFS" target="_blank"><img src="../../../../assets/images/footer_twitter_icn.png" alt="" class="img-responsive"/></a>
-            </li>
             <li><a href="https://www.facebook.com/RotoPros/" target="_blank"><img src="../../../../assets/images/footer_email_icn.png" alt="" class="img-responsive"/></a>
             </li>
-            <li><a href="https://www.instagram.com/rotopros/" target="_blank"><img src="../../../../assets/images/footer_insta_icn.png" alt="" class="img-responsive"/></a></li>
+            <li><a href="https://twitter.com/RotoProsDFS" target="_blank"><img src="../../../../assets/images/footer_twitter_icn.png" alt="" class="img-responsive"/></a>
+            </li>
+            <li><a href="https://www.instagram.com/dfsrotopros/" target="_blank"><img src="../../../../assets/images/footer_insta_icn.png" alt="" class="img-responsive"/></a></li>
           </ul>
         </div>
       </div>
