guard added on plans page.

--- a/src/app/front/components/sign-up/sign-up.component.html
+++ b/src/app/front/components/sign-up/sign-up.component.html
@@ -133,7 +133,7 @@
                           <span>{{(plan.amount / 100) | currency:'USD':true}}/</span>
                         </span>
                       </div>
-                      <div class="plan-time">{{plan.interval_count+' '+plan.interval}}</div>
+                      <div class="plan-time">{{plan.interval}}</div>
                     </div>
                   </div>
                 </div>
