email address update and user footer updated to have consistant footer

--- a/src/app/front/components/footer/front-footer.component.html
+++ b/src/app/front/components/footer/front-footer.component.html
@@ -24,7 +24,7 @@
             <li><a href="https://www.facebook.com/RotoPros/" target="_blank"><img src="../../../../assets/images/footer_facebook_icn.svg" alt="" class="img-responsive"/></a></li>
             <li><a href="https://twitter.com/RotoProsDFS" target="_blank"><img src="../../../../assets/images/footer_twitter_icn.png" alt="" class="img-responsive"/></a></li>
             <li><a href="https://www.instagram.com/dfsrotopros/" target="_blank"><img src="../../../../assets/images/footer_insta_icn.png" alt="" class="img-responsive"/></a></li>
-            <li><a href="mailto: josh@rotopros.com"><img src="../../../../assets/images/footer_email_icn.png" alt="" class="img-responsive"/></a></li>
+            <li><a href="mailto:support@rotopros.com"><img src="../../../../assets/images/footer_email_icn.png" alt="" class="img-responsive"/></a></li>
           </ul>
         </div>
       </div>
