--- a/src/app/front/components/video/video.component.html
+++ b/src/app/front/components/video/video.component.html
@@ -18,27 +18,29 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-xs-12 col-md-8 col-md-offset-2" *ngFor="let video of videoRecords;let i = index">
-        <!-- 21:9 aspect ratio -->
-        <!-- <div class="embed-responsive embed-responsive-21by9">
-          <iframe class="embed-responsive-item" src="//www.youtube.com/embed/hktHB13cR2g"></iframe>
-        </div> -->
 
-        <!-- 16:9 aspect ratio -->
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" [src]="video"></iframe>
+
+      <div class="row" *ngIf="liveRecords.length == 0" style="margin:50px;">
+        <div class="col-sm-12 text-center">
+          <h3>There is no live video available at the moment.</h3>
         </div>
-
-        <!-- 4:3 aspect ratio -->
-        <!-- <div class="embed-responsive embed-responsive-4by3">
-          <iframe class="embed-responsive-item" src="//www.youtube.com/embed/hktHB13cR2g"></iframe>
-        </div> -->
-
-        <!-- 1:1 aspect ratio -->
-        <!-- <div class="embed-responsive embed-responsive-1by1">
-          <iframe class="embed-responsive-item" src="//www.youtube.com/embed/hktHB13cR2g"></iframe>
-        </div> -->
       </div>
+
+
+      <div class="col-xs-12 col-md-8 col-md-offset-2" *ngFor="let video of liveRecords;let i = index">
+        <h4>{{video.title}}</h4>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" [src]="video.url" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-md-8 col-md-offset-2" *ngFor="let video of videoRecords;let i = index">
+        <h4>{{video.title}}</h4>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" [src]="video.url" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
