--- a/src/app/front/components/plan/plan.component.html
+++ b/src/app/front/components/plan/plan.component.html
@@ -93,7 +93,7 @@
           <li>Personalized coaching from top DraftKings and FanDuel players</li>
           <li>Podcasts and live shows that give insight to DFS success</li>
           <li>Relevant news updates and breaking news</li>
-          <li>MLB player projections</li>
+          <!--<li>MLB player projections</li>-->
         </ul>
       </div>
     </div>
