--- a/src/app/front/components/video/video.component.html
+++ b/src/app/front/components/video/video.component.html
@@ -29,7 +29,7 @@
 
       <div class="col-xs-12 col-md-8 col-md-offset-2" *ngFor="let video of liveRecords;let i = index">
         <h4>{{video.title}}</h4>
-        <div class="embed-responsive embed-responsive-16by9">
+        <div class="embed-responsive embed-responsive-16by9" style="border: 10px solid #FF0000;border-radius: 25px;">
           <iframe class="embed-responsive-item" [src]="video.url" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
@@ -40,6 +40,8 @@
           <iframe class="embed-responsive-item" [src]="video.url" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
+
+      <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left"><span class="glyphicon glyphicon-chevron-up"></span></a>
 
     </div>
   </div>
