lineups api updated

--- a/src/app/front/components/daily-lineup/daily-lineup.component.html
+++ b/src/app/front/components/daily-lineup/daily-lineup.component.html
@@ -8,12 +8,12 @@
         <div class="lineupHedin">
           <h1>Daily Lineups for {{todayDate | date:'dd MMM, yyyy'}}</h1>
         </div>
-        <div class="dTabs">
+        <!-- <div class="dTabs"> -->
           <!-- Nav tabs -->
-          <rp-tab-view [tabs]="lineupTabs"
+          <!-- <rp-tab-view [tabs]="lineupTabs"
                        [activeTab]="activeTab"
                        (tabChanged)="onLineupTabChanged($event)"></rp-tab-view>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
