--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -95,6 +95,10 @@
                 <a routerLink="/videos" (click)="closeMobileMenu()">Videos</a>
               </li>
 
+              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+                <a routerLink="/lineups">Daily MLB Lineups</a>
+              </li>
+
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a target="_blank" href="https://dfsgods.slack.com" (click)="closeMobileMenu()">Rotopros Chat</a>
               </li>
@@ -123,9 +127,7 @@
                     <i class="fa fa-rss-square" id="rss-link"></i>
                   </a>
               </li>
-              <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
-                <a routerLink="/lineups">Lineups</a>
-              </li>-->
+
             </ul>
           </div>
           <div class="rightNav">
