lineups issue fixed and video text added for old videos

--- a/src/app/front/components/video/video.component.html
+++ b/src/app/front/components/video/video.component.html
@@ -26,7 +26,18 @@
         </div>
       </div>
 
+      <hr />
 
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <div style="text-align:center">
+            <h3>Other Videos</h3>
+          </div>
+        </div>
+      </div>
+
+      <div class="divider">&nbsp;</div>
+    
       <div class="col-xs-12 col-md-8 col-md-offset-2" *ngFor="let video of liveRecords;let i = index">
         <h4>{{video.title}}</h4>
         <div class="embed-responsive embed-responsive-16by9" style="border: 10px solid #FF0000;border-radius: 25px;">
