--- a/src/app/front/components/footer/front-footer.component.html
+++ b/src/app/front/components/footer/front-footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer Starts -->
-<footer>
+<footer id="footer">
   <div class="topFooter">
     <div class="container">
       <div class="row">
@@ -21,10 +21,10 @@
         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
           <h1 class="footerHdin">Follow Us On :</h1>
           <ul class="footerSocialLinks">
-            <li><a href="https://www.facebook.com/RotoPros/" target="_blank"><img src="../../../../assets/images/footer_facebook_icn.svg" alt="" class="img-responsive"/></a></li>
+            <li><a href="https://www.facebook.com/RotoPros" target="_blank"><img src="../../../../assets/images/footer_facebook_icn.svg" alt="" class="img-responsive"/></a></li>
             <li><a href="https://twitter.com/RotoProsDFS" target="_blank"><img src="../../../../assets/images/footer_twitter_icn.png" alt="" class="img-responsive"/></a></li>
-            <li><a href="https://www.instagram.com/rotopros/" target="_blank"><img src="../../../../assets/images/footer_insta_icn.png" alt="" class="img-responsive"/></a></li>
-            <li><a href="mailto: josh@rotopros.com"><img src="../../../../assets/images/footer_email_icn.png" alt="" class="img-responsive"/></a></li>
+            <li><a href="https://www.instagram.com/dfsRotoPros/" target="_blank"><img src="../../../../assets/images/footer_insta_icn.png" alt="" class="img-responsive"/></a></li>
+            <li><a href="mailto:support@rotopros.com"><img src="../../../../assets/images/footer_email_icn.png" alt="" class="img-responsive"/></a></li>
           </ul>
         </div>
       </div>
