--- a/src/app/front/components/header/front-header.component.css
+++ b/src/app/front/components/header/front-header.component.css
@@ -63,9 +63,10 @@
   .dropdown-content:after {
     display: none;
   }
+
   .dropdown-content {
-    left:20px;
-    right:20px;
+    left: 20px;
+    right: 20px;
   }
 }
 
@@ -128,3 +129,34 @@
   margin-left: 3px;
 }
 
+.header-margin {
+  height: 85px;
+  width: 100%;
+  z-index: 1;
+}
+
+header {
+  position: fixed;
+  width: 100%;
+  top:0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+}
+
+@media (max-width: 1150px){
+  .header-margin {
+    height: 76px;
+  }
+}
+@media (max-width: 767px){
+  .header-margin {
+    height: 69px;
+  }
+}
+
+@media (max-width: 479px){
+  .header-margin {
+    height: 65px;
+  }
+}
