--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -1,3 +1,4 @@
+<div class="header-margin"></div>
 <header>
   <div class="topHeader">
     <div class="container-fluid">
@@ -76,7 +77,8 @@
             </div>
             <ul>
               <li (window:resize)="onResize($event)">
-                <a *ngIf="headerIsStacked && loggedUser" style="width: auto" routerLink="{{(role == 'user' || role == 'provider')? '/user' : '/admin'}}">
+                <a *ngIf="headerIsStacked && loggedUser" style="width: auto"
+                   routerLink="{{(role == 'user' || role == 'provider')? '/user' : '/admin'}}">
                   Dashboard
                 </a>
               </li>
@@ -89,6 +91,9 @@
               <!--<li><a>Products</a></li>-->
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/articles" (click)="closeMobileMenu()">Articles</a>
+              </li>
+              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+                <a href="#" (click)="closeMobileMenu()">RotoPros Live</a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a target="_blank" href="https://dfsgods.slack.com" (click)="closeMobileMenu()">Rotopros Chat</a>
@@ -113,10 +118,10 @@
               </li>
 
               <li id="rss">
-                  <a routerLink="/podcast">Foul Balls</a>
-                  <a href="http://feeds.soundcloud.com/users/soundcloud:users:308749747/sounds.rss">
-                    <i class="fa fa-rss-square" id="rss-link"></i>
-                  </a>
+                <a routerLink="/podcast">Foul Balls</a>
+                <a href="http://feeds.soundcloud.com/users/soundcloud:users:308749747/sounds.rss">
+                  <i class="fa fa-rss-square" id="rss-link"></i>
+                </a>
               </li>
               <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/lineups">Lineups</a>
@@ -128,7 +133,8 @@
               <li class="loginBtn" *ngIf="!isLoggedIn"><a routerLink="/login">Login</a></li>
               <li class="signUpBtn" *ngIf="!isLoggedIn"><a routerLink="/signup">Sign Up</a></li>
               <li class="signUpBtn" *ngIf="isLoggedIn">
-                <a appMobileHidden style="width: auto" routerLink="{{(role == 'user' || role == 'provider')? '/user' : '/admin'}}">
+                <a appMobileHidden style="width: auto"
+                   routerLink="{{(role == 'user' || role == 'provider')? '/user' : '/admin'}}">
                   Dashboard
                 </a>
               </li>
