--- a/src/app/front/front-main.component.html
+++ b/src/app/front/front-main.component.html
@@ -1,6 +1,8 @@
 <rp-front-header></rp-front-header>
 <router-outlet></router-outlet>
 <rp-front-footer></rp-front-footer>
+<div class="scroll-top-btn">
+</div>
 <!--
 <h1>Front Main Component...</h1>
 <div>
